# docling-wrapper

./: .gitignore  Dockerfile  README.md  build_docker.sh  claude.md  docker-compose.yml  otel-collector-config.yaml  output.md  push_to_dockerhub.sh  pyproject.toml  run_docker.sh  run_local.sh
architecture_docs/: architecture.md  codebaseSummary.md  currentTask.md  projectRoadmap.md
docs/: openapi.yaml  serve_openapi.py
src/: main.py
src/docling_wrapper/api/: models.py  routes.py
src/docling_wrapper/services/: html_converter.py
src/docling_wrapper/utils/: http_client.py  mock_docling.py
test/: sample.html  test_conversion.py
