[project]
name = "docling-wrapper"
version = "0.1.0"
description = "A lightweight API service that wraps IBM's Docling library to provide document conversion capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "httpx>=0.24.1",
    "docling>=2.53.0",
    "pydantic>=2.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_wrapper"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
